<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, PicManagerActivity!</string>
    <string name="app_name">PicManager</string>
    <string name="tab_one">1</string>
    <string name="tab_two">2</string>
    <string name="tab_three">3</string>
    <string name="activity_title">Scaner</string>
    <string name="setting_activity_title">设置</string>
    <string name="edit">编辑</string>
    <string name="finish">完成</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="edit_hint">Search</string>
    <string name="take_photo">立即拍照</string>
    <string name="pick_photo">本地图库</string>
    <string name="pick_image">选择图片</string>
    <string name="delete">删除</string>
    <string name="create">新建</string>
    <string name="nomal">查看</string>
    <string name="share">分享</string>
    <string name="detail">detal</string>
    <string name="back_to_one">回到一级</string>
    <string name="setting_svr_setting">服务器设置</string>
    <string name="setting_personal_center">个人中心</string>
    <string name="setting_pic_setting">图片设置</string>
    <string name="setting_valuation">评价</string>
    <string name="setting_common">通用</string>
    <string name="reg_title">注册</string>
    <string name="login_title">登录</string>
    <string name="reg_username">昵称:</string>
    <string name="reg_password">密 码:</string>
    <string name="reg_email">邮箱:</string>
    <string name="reg_sex">性别:</string>
    <string name="reg_tel">手机:</string>
    <string name="reg_addr">地址:</string>
    <string name="reg_go_reg">去注册</string>
    <string name="reg_reg">完成注册</string>
    <string name="reg_login">登 录</string>
    <string name="reg_username_hint">5-20位字母/数字/下划线</string>
    <string name="reg_password_hint">6-16位字符</string>
    <string name="reg_email_hint">请输入联系邮箱</string>
    <string name="reg_phone_hint">请输入联系电话</string>
    <string name="reg_addr_hint">请输入住址</string>
    <string name="pic_title_hint">请输入图片标题</string>
    <string name="share_popup_title">请选择分享平台</string>
    <string name="share_popup_btn_share">分享</string>
    <string name="weibo_sina_bind">新浪微博绑定成功</string>
    <string name="weibo_tencent_bind">腾讯微博绑定成功</string>
    <string name="weibo_renren_bind">人人网绑定成功</string>
    <string name="weibo_qzone_bind">腾讯空间绑定成功</string>
    <string name="toast_share_has_sent">已发送分享内容</string>
    <string name="share_popup_input_limit">还可以输入 %d 个字</string>
    <string name="toast_share_type_list_null">请至少选择一个分享平台</string>
    <string name="toast_share_content_null">分享的内容不能为空</string>

</resources>