<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="7.5dip"
        android:paddingRight="7.5dip"
        android:paddingTop="12dip" >

        <LinearLayout
            android:id="@+id/bg_reg_edit_email"
            android:layout_width="fill_parent"
            android:layout_height="47.5dip"
            android:layout_marginBottom="5dip"
            android:background="@drawable/reg_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="0dip"
            android:paddingLeft="9dip"
            android:paddingRight="9dip"
            android:paddingTop="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg_email"
                android:textColor="@color/font_color" />

            <EditText
                android:id="@+id/edit_reg_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_email_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:paddingLeft="3dip"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bg_reg_edit_password"
            android:layout_width="fill_parent"
            android:layout_height="47.5dip"
            android:layout_marginBottom="5dip"
            android:background="@drawable/reg_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="0dip"
            android:paddingLeft="9dip"
            android:paddingRight="9dip"
            android:paddingTop="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg_password"
                android:textColor="@color/font_color" />

            <EditText
                android:id="@+id/edit_reg_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_password_hint"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:paddingLeft="3dip"
                android:password="true"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bg_reg_edit_username"
            android:layout_width="fill_parent"
            android:layout_height="47.5dip"
            android:layout_marginBottom="7.5dip"
            android:background="@drawable/reg_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="0dip"
            android:paddingLeft="9dip"
            android:paddingRight="9dip"
            android:paddingTop="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg_username"
                android:textColor="@color/font_color" />

            <EditText
                android:id="@+id/edit_reg_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_username_hint"
                android:imeOptions="actionNext"
                android:paddingLeft="3dip"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bg_reg_edit_sex"
            android:layout_width="fill_parent"
            android:layout_height="47.5dip"
            android:layout_marginBottom="5dip"
            android:background="@drawable/reg_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="0dip"
            android:paddingLeft="9dip"
            android:paddingRight="9dip"
            android:paddingTop="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg_sex"
                android:textColor="@color/font_color" />

            <RadioGroup
                android:id="@+id/edit_reg_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="3dip" >

                <RadioButton
                    android:id="@+id/edit_sex_man"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="男"
                    android:textColor="@color/font_color" />

                <RadioButton
                    android:id="@+id/edit_sex_woman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="女"
                    android:textColor="@color/font_color" />
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bg_reg_edit_tel"
            android:layout_width="fill_parent"
            android:layout_height="47.5dip"
            android:layout_marginBottom="5dip"
            android:background="@drawable/reg_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="0dip"
            android:paddingLeft="9dip"
            android:paddingRight="9dip"
            android:paddingTop="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg_tel"
                android:textColor="@color/font_color" />

            <EditText
                android:id="@+id/edit_tel"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_phone_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingLeft="3dip"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bg_reg_edit_addr"
            android:layout_width="fill_parent"
            android:layout_height="47.5dip"
            android:layout_marginBottom="5dip"
            android:background="@drawable/reg_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="0dip"
            android:paddingLeft="9dip"
            android:paddingRight="9dip"
            android:paddingTop="0dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:text="@string/reg_addr"
                android:textColor="@color/font_color" />

            <EditText
                android:id="@+id/edit_reg_addr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/reg_addr_hint"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:paddingLeft="3dip"
                android:singleLine="true" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_reg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.5dip"
            android:shadowColor="#FF003366"
            android:shadowDx="0.0"
            android:shadowDy="-2.0"
            android:shadowRadius="0.1"
            android:text="@string/reg_reg"
            android:textColor="#000000" />
    </LinearLayout>

</ScrollView>