<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#c5ccd5"
    android:orientation="vertical" >

    <!-- 标题栏 -->

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="fill_parent"
        android:layout_height="50dip"
        android:background="@color/title_bg" >

        <TextView
            android:id="@+id/TextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/setting_activity_title"
            android:textColor="@color/color_title_default"
            android:textSize="18sp" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back"
            android:text="@string/back"
            android:textColor="#ffffff" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="7.5dip"
            android:paddingRight="7.5dip"
            android:paddingTop="10dip" >

            <!-- 设置 -->

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginTop="12dip"
                android:clickable="true"
                android:focusable="true"
                android:paddingLeft="5dip"
                android:text="@string/setting_activity_title"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/layout_bg"
                android:orientation="vertical"
                android:paddingBottom="5dip"
                android:paddingLeft="0dip"
                android:paddingRight="0dip"
                android:paddingTop="10dip" >


                <RelativeLayout
                    android:id="@+id/personal_setting"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dip"
                    android:paddingRight="15dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:maxHeight="31dip"
                        android:text="@string/setting_personal_center"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:maxHeight="31dip"
                        android:src="@drawable/accessory_disclosure" />
                </RelativeLayout>

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="1dip"
                    android:layout_marginBottom="12.5dip"
                    android:layout_marginTop="9dip"
                    android:background="#FFdedede" />


                <RelativeLayout
                    android:id="@+id/valuation_setting"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dip"
                    android:paddingRight="15dip" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerVertical="true"
                        android:maxHeight="31dip"
                        android:text="@string/setting_valuation"
                        android:textColor="#000000"
                        android:textSize="18sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:maxHeight="31dip"
                        android:src="@drawable/accessory_disclosure" />
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>